Do not dismiss the Save Password Infobar when a redirection occurs.

Copies the logic used in Chrome Android:
https://cs.chromium.org/chromium/src/chrome/browser/password_manager/password_manager_infobar_delegate_android.cc?rcl=af7e5066a0d2bf55b68cfa9e514e2f47f4254d62&l=34

BUG=720090, 682678

Review-Url: https://codereview.chromium.org/2919023002
Cr-Commit-Position: refs/heads/master@{#476619}