ios/chrome/browser/passwords/ios_chrome_save_password_infobar_delegate.h
@@ -35,6 +35,8 @@ class IOSChromeSavePasswordInfoBarDelegate
 
   ~IOSChromeSavePasswordInfoBarDelegate() override;
 
+  bool ShouldExpire(const NavigationDetails& details) const override;
+
  private:
   IOSChromeSavePasswordInfoBarDelegate(
       bool is_smart_lock_branding_enabled,
