ios/chrome/browser/passwords/ios_chrome_save_password_infobar_delegate.mm
@@ -72,3 +72,8 @@ bool IOSChromeSavePasswordInfoBarDelegate::Cancel() {
   set_infobar_response(password_manager::metrics_util::CLICKED_NEVER);
   return true;
 }
+
+bool IOSChromeSavePasswordInfoBarDelegate::ShouldExpire(
+    const NavigationDetails& details) const {
+  return !details.is_redirect && ConfirmInfoBarDelegate::ShouldExpire(details);
+}
